--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,16 @@
             <version>0.11.1</version>
             <scope>runtime</scope>
         </dependency>
-
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-core</artifactId>
+            <version>2.1.6</version>
+        </dependency>
 
 
     </dependencies>
